traced-test/tests/ui/invalid_combination_with_test.stderr
error: custom attribute panicked
 --> tests/ui/invalid_combination_with_test.rs:3:1
  |
3 | #[traced_test]
  | ^^^^^^^^^^^^^^
  |
  = help: message: traced_test generator error: TokenStream(
              TokenStream [
                  Ident {
                      ident: "compile_error",
                      span: #5 bytes(31..45),
                  },
                  Punct {
                      ch: '!',
                      spacing: Alone,
                      span: #5 bytes(31..45),
                  },
                  Group {
                      delimiter: Parenthesis,
                      stream: TokenStream [
                          Literal {
                              kind: Str,
                              symbol: "The `traced_test` attribute should be used in place of `#[test]` or `#[tokio::test]`, not alongside them.",
                              suffix: None,
                              span: #5 bytes(31..45),
                          },
                      ],
                      span: #5 bytes(31..45),
                  },
                  Punct {
                      ch: ';',
                      spacing: Alone,
                      span: #5 bytes(31..45),
                  },
              ],
          )

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/invalid_combination_with_test.rs:8:2
  |
8 | }
  |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_combination_with_test.rs`
